docs: flesh out the table component javadocs
The classes carried one-line descriptions that named the element and
nothing else. They now say what each element is for, which children the
HTML specification allows, and which of this API's operations to reach
for, with links to the matching MDN pages.